objects/MGDetalleSaldo__c.object
<CustomObject>
    <fields>
        <fullName>MGFechaVencimiento__c</fullName>
        <label>MGFechaVencimiento</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MGPuntos__c</fullName>
        <label>MGPuntos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MGSocioID__c</fullName>
        <label>MGSocioID</label>
        <referenceTo>MGSocios__c</referenceTo>
        <relationshipLabel>MGDetalleSaldos</relationshipLabel>
        <relationshipName>MGDetalleSaldos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MGDetalleSaldo</label>
    <nameField>
        <label>MGDetalleSaldo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MGDetalleSaldos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>